# PocketDVDNet

./: .gitignore  README.md  pyproject.toml
configs/paper/: distill.yaml  distill_from_downloaded_teacher.yaml  eval.yaml  eval_downloaded_student.yaml  eval_downloaded_student_realistic.yaml  eval_downloaded_student_set8.yaml  eval_downloaded_student_set8_realistic.yaml  eval_realistic.yaml  eval_set8.yaml  eval_set8_realistic.yaml  pocketdvdnet_recipe.json  prune.yaml  teacher.yaml
dataloaders/: noise.py  predicted_labels.csv
dataloaders/fastdvdnet/: __init__.py  dataloader.py  utils.py
models/: __init__.py  pocketdvdnet.py  shiftnetwrapper.py
models/fastdvdnet/: __init__.py  fastdvdnet.py
scripts/: bootstrap.py  live_video_inference.py  verify_smoke.py
stages/: 01_prune_fastdvdnet.py  02_train_teacher.py  03_distill_pocketdvdnet.py  04_evaluate.py
train_method/: obproxsg.py
utils/: lr_scheduler.py  prefetcher.py
workflow/: __init__.py  artifacts.py  config.py  data.py  distill.py  evaluate.py  inference.py  losses.py  paths.py  prune.py  runtime.py  teacher.py  training.py  validate.py
